<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="fahrenheit">Enter Fahrenheit</string>
    <string name="celsius">Enter Celsius</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>

    <string name="currencyApplication">Currency Converter</string>
    <string name="dollar">Enter Dollar</string>
    <string name="euro">Enter Euro</string>
    <string name="convertCurrency">Convert</string>
    <string name="resetCurrency">Reset</string>
    <string name="button">Button</string>
</resources>