<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"/>
    <EditText
        android:id="@+id/celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/celsius"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
        android:id="@+id/fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fahrenheit"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsius"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/currencyConverter"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="292dp" android:layout_marginEnd="206dp" android:layout_marginRight="206dp"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="205dp" android:layout_marginStart="205dp" android:textSize="36sp"
        android:textColor="#673AB7" android:text="@string/currencyApplication" android:textStyle="bold"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/dollar"
        android:hint="@string/dollar" android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/currencyConverter" android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
        android:layout_marginStart="99dp" android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/euro" android:autofillHints=""/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/euro"
        android:hint="@string/euro" android:layout_marginEnd="98dp" android:layout_marginRight="98dp"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="99dp" android:layout_marginStart="99dp" android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dollar" android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/resetCurrency" android:autofillHints=""/>
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/convert"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit"/>
    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toStartOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit"/>
    <Button
        android:id="@+id/convertCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginTop="8dp"
        android:text="@string/convertCurrency"
        app:layout_constraintEnd_toStartOf="@+id/resetCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euro"/>
    <Button
        android:text="@string/resetCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/resetCurrency"
        android:layout_marginEnd="78dp" android:layout_marginRight="78dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/euro"
        />

</androidx.constraintlayout.widget.ConstraintLayout>